<resources>
    <string name="app_name">访客管理</string>
    <string name="company_name">成都四骋网络科技有限公司</string>
    <string name="app_title">智能访客管理系统</string>
    <string name="preview_avatar">预览头像</string>


    <string name="action_settings" />
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">PC700Demo</string>
    <string name="serialportnumber">Serial Number:</string>
    <string name="baudrate">Baud Rate:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sectornumber">Sector Number:</string>
    <string name="blocknumber">Block Number:</string>
    <string name="receivedata">Card Type:</string>
    <string name="senddata">Card ID:</string>
    <string name="blockdata">Block Data:</string>
    <string name="readblock">Read Block</string>
    <string name="writeblock">Write Block</string>
    <string name="autoreadwrite">Auto Read Write Block</string>
    <string name="opensuccess">Open success!</string>
    <string name="systemprompt">System prompt</string>
    <string name="confirmexit">you sure exit?</string>
    <string name="yes">Yes</string>
    <string name="cancal">Cancal</string>
    <string name="str_print">PrinterTest</string>
    <string name="str_psam">PSAMTest</string>
    <string name="str_rfid">RFIDTest</string>
    <string name="str_camera">CameraTest</string>
    <string name="str_qrcode">扫描访客条登记离开</string>
    <string name="str_idcard">识别身份证登记离开</string>
    <string name="sure_leave">结束来访</string>
    <string name="str_wireless">SerialPort</string>
    <string name="str_powercord">Powercord</string>
    <string name="btpsam1">SAM1</string>
    <string name="btpsam2">SAM2</string>
    <string name="btn1">CardReset</string>
    <string name="btn2">GetRandom</string>
    <string name="btn3">SelectMaster</string>
    <string name="openpic">Open Picture</string>
    <string name="printpic">Print Picture</string>
    <string name="qrcode">QR CODE</string>
    <string name="barcode">BAR CODE</string>
    <string name="timing">Timed Print</string>
    <string name="print">Print</string>
    <string name="str_printunicode">Print Unicode</string>
    <string name="wordtopic">Words Turn Pictures</string>
    <string name="str_cannotcreatebar">Can Not Create Barcode</string>
    <string name="sendsuccess">Send success!</string>
    <string name="camera">Photo</string>
    <string name="hex">Hex</string>
    <string name="send">Send</string>
    <string name="autosend">Auto Send</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
    <string name="selectserialport">Please select the serial number</string>
    <string name="currentserialport">The currnet serial number:</string>
    <string name="selectbaudrate">Please select the baud rate</string>
    <string name="currentbaudrate">The current baud rate:</string>
    <string name="receivebuf">Receiver Data:</string>
    <string name="sendbuf">Send Data:</string>
    <string name="openpower">Open Power</string>
    <string name="closepower">Close Power</string>
    <string name="openautoread">OpenAutoRead</string>
    <string name="closeautoread">CloseAutoRead</string>
    <string name="btnprinton">printer power on</string>
    <string name="btnprintoff">printer power off</string>
    <string name="btnrfidon">RFID power on</string>
    <string name="btnrfidoff">RFID power off</string>
    <string name="btnwifion">WIFI power on</string>
    <string name="btnwifioff">WIFI power off</string>
    <string name="btnrj45on">RJ45 LAN Power On</string>
    <string name="btnrj45off">RJ45 LAN Power Off</string>
    <string name="newline">New Line</string>


    <string name="capturing">拍照处理中，请稍后...</string>
    <string name="read_card">正在识别身份证，请稍后...</string>
    <string name="please_put_card">请放入访客的身份证进行识别，并且给访客拍照！</string>
    <string name="barcode_not_exits">请放入访客的身份证进行识别，并且给访客拍照！</string>
    <string name="please_authorize_first">"请从首页进入“信息配置”=>“授权认证”完成授权认证"</string>


    <!--必须填写md5值-->
    <string name="some_key">e10adc3949ba59abbe56e057f20f883e</string>
</resources>
