<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@id/btnOpenPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/openpic" />

        <Button
            android:id="@id/btnWordToPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/wordtopic" />

        <Button
            android:id="@id/btnPrintPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/printpic" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="157dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@id/btnQrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/qrcode" />

        <Button
            android:id="@id/btnBarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/barcode" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@id/checkBoxTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.28"
            android:checked="false"
            android:text="@string/timing" />

        <Button
            android:id="@id/btnPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/print" />

        <Button
            android:id="@+id/btnUnicode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_printunicode" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@id/iv_test"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>

</LinearLayout>