<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:id="@+id/btns">

        <Button
            android:id="@+id/btn_idcard_read"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:background="#D4D6D5"
            android:text="@string/str_idcard"
            />
        <Button
            android:id="@+id/btn_barcode_read"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/str_qrcode"
            android:layout_marginLeft="3dp"
            style="@style/btn_blue"
            />
    </LinearLayout>


    <include layout="@layout/print_preview"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/btns"
        android:id="@+id/print_preview_block"
        />

    <ImageView
        android:id="@+id/qrcode_bitmap"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/print_preview_block"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/qrcode_bitmap"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="来访状态："/>
        <TextView
            android:id="@+id/leave_visit_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:textColor="@android:color/holo_red_dark"
            android:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="值班人员:"/>
        <Spinner
            android:id="@+id/duty_person_in_leave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            ></Spinner>

        <Button
            android:id="@+id/finish_visit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/sure_leave"
            style="@style/btn"
            />
    </LinearLayout>

</RelativeLayout>